--- a/backend/package.json
+++ b/backend/package.json
@@ -2,22 +2,24 @@
   "name": "backend",
   "type": "module",
   "scripts": {
-    "dev": "wrangler dev",
+    "dev": "wrangler dev --remote",
     "deploy": "wrangler deploy --minify",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
-    "@prisma/adapter-pg": "^7.4.0",
-    "@prisma/client": "^7.4.0",
+    "@prisma/adapter-pg": "^7.4.1",
+    "@prisma/client": "^7.4.1",
     "@prisma/extension-accelerate": "^3.0.1",
+    "@types/node": "^25.3.0",
+    "@types/pg": "^8.16.0",
     "dotenv": "^17.3.1",
-    "hono": "^4.11.10",
-    "pg": "^8.18.0"
+    "hono": "^4.12.0",
+    "pg": "^8.18.0",
+    "prisma": "^7.4.1",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@types/node": "^25.2.3",
-    "@types/pg": "^8.16.0",
-    "prisma": "^7.4.0",
     "wrangler": "^4.4.0"
   }
 }
