--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,10 +6,8 @@
     "strict": true,
     "skipLibCheck": true,
     "lib": [
-      "ESNext",
-      "DOM"
+      "ESNext"
     ],
-    "esModuleInterop": true,
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx"
   },
